# cloud-stuff

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: daily.yml  main.yml  post.yml
models/: __init__.py  message.py  users.py
