[tool.poetry]
name = "cloud-stuff"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
supabase = "^2.4.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"
urllib3 = "<2.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy-libsql = "^0.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
ruff = "^0.3.5"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
